# trading-advisor-3000

./: .coderabbit.yaml  .cursorignore  .dockerignore  .gitignore  .graphifyignore  .importlinter  AGENTS.md  CODEOWNERS  Makefile  README.md  agent-runbook.md  harness-guideline.md  pyproject.toml
.codex/skills/: README.md
.githooks/: post-checkout  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: branch-diagnostic.yml  ci.yml  dashboard-refresh.yml  nightly.yml
.serena/: .gitignore  project.yml
artifacts/: acceptance-act-2026-03-16.md  acceptance-remarks-closure-2026-03-16.md  acceptance-revalidation-2026-03-16.md  autonomy-kpi-report.md  dev-loop-baseline.md  governance-dashboard.json  governance-dashboard.md  harness-baseline-metrics.json  phase2a-dagster-proof-acceptance.json  phase2a-dagster-proof-review.json  phase2a-dagster-proof.acceptance.json  phase2a-dagster-proof.json  phase2a-spark-proof-acceptance.json  phase2a-spark-proof-docker.json  phase2a-spark-proof-review.json  phase2a-spark-proof.json  phase8-operational-proving.dry-run.json  phase8-operational-proving.dry-run.optin.json  phase8-operational-proving.dryrun.json  phase8-operational-proving.json  phase8-stale-artifact-check.json  phase8-stale-check.json  process-improvement-report.md  requirements-acceptance-2026-03-16.md  strict-acceptance-closure-2026-03-16.md
artifacts/codex/: from-package-last-message-chat-intake.txt  from-package-last-message.txt
artifacts/rename-migration/: phase6-inventory.json  phase6-inventory.md
codex_ai_delivery_shell_package/: 01_TZ_AI_DELIVERY_SHELL.md  02_SOURCE_AUDIT_AND_PR43_FINDINGS.md  03_MIGRATION_SCOPE_AND_FILE_INVENTORY.md  04_SKILLS_TRANSFER_MATRIX.md  05_TRANSFER_PLAN_FOR_CODEX.md  06_PHASES_AND_DOD.md  07_TARGET_ARCHITECTURE_TRADING_ADVISOR_3000.md  08_TESTING_AND_QA_STRATEGY.md  09_CODEX_IMPLEMENTATION_RUNBOOK.md  10_CODEX_START_PROMPT.md  README.md
codex_ai_delivery_shell_package/appendices/: A_DIRECTORY_TEMPLATE.md  B_COMMAND_MATRIX.md  C_RISKS_ASSUMPTIONS_NON_GOALS.md  D_SOURCE_EVIDENCE.md
configs/: agent_incident_policy.yaml  broker_staging_connector_profile.v1.json  change_surface_mapping.yaml  codeowners_policy.yaml  context_coverage.yaml  critical_contours.yaml  process_regression_thresholds.yaml  task_outcome_policy.yaml
configs/moex_foundation/: instrument_mapping_registry.v1.yaml  session_schedule_rules.v1.json
configs/moex_operational_hardening/: monitoring_requirements.v1.yaml
configs/moex_phase02/: strategy_scoring_profile.v1.yaml
configs/moex_phase03/: reconciliation_thresholds.v1.yaml
configs/moex_phase04/: scheduler_jobs.v1.yaml
configs/moex_reconciliation/: reconciliation_thresholds.v1.yaml
configs/product-plane/: continuous_front_indicators.yaml
deployment/: README.md
deployment/mcp/: .env.mcp.example  README.md  bootstrap_mcp_config.py  config.template.toml  known-limitations.md  mcp-rollout-matrix.yaml  rollback.md  rollout-manifest.yaml  troubleshooting.md
deployment/phase9-battle-run/: .env.phase9-battle-run.example
deployment/quik-live-feed/: README.md
deployment/runtime-instances/: moex-runtime-instances.v1.yaml
deployment/stocksharp-sidecar/: README.md  TradingAdvisor3000.StockSharpSidecar.sln  phase9-sidecar-delivery-manifest.json
docs/: DEV_WORKFLOW.md  README.md  session_handoff.md
docs/agent/: checks.md  critical-contours.md  domains.md  entrypoint.md  native-runtime-selection.md  runtime.md  skills-catalog.md  skills-routing.md  solution-intent.md
docs/agent-contexts/: CTX-API-UI.md  CTX-ARCHITECTURE.md  CTX-CONTRACTS.md  CTX-DATA.md  CTX-DOMAIN.md  CTX-EXTERNAL-SOURCES.md  CTX-OPS.md  CTX-ORCHESTRATION.md  CTX-RESEARCH.md  CTX-SKILLS.md  README.md
docs/architecture/: README.md  architecture-map-v2.md  architecture-map.md  dual-surface-safe-rename-migration-technical-specification.md  entities-v2.md  glossary.md  governed-pipeline-hardening-technical-specification.md  layers-v2.md  layers.md  modules.md  repository-surfaces.md  trading-advisor-3000.md
docs/archive/: README.md
docs/checklists/: README.md  anti-shortcut-governance.md  (+4 more)
memory/: README.md  agent_memory.yaml  task_outcomes.yaml
plans/: PLANS.yaml  README.md
product-plane/: README.md
registry/: README.md  stack_conformance.yaml
scripts/: __init__.py  add_project_map_item.py  agent_process_telemetry.py  apply_app_migrations.py  autonomy_kpi_report.py  build_dual_surface_rename_inventory.py  build_governance_dashboard.py  build_governed_release_decision.py  build_moex_phase03_staging_binding_report.py  build_moex_staging_binding_report.py  build_phase02_publication_evidence.py  build_phase9_quik_connector.py  build_project_cockpit.py  build_publication_lifecycle_evidence.py  cleanup_research_indicator_staging.py  codex_from_package.py  codex_governed_bootstrap.py  codex_governed_entry.py  codex_inbox_daemon.ps1  codex_phase_orchestrator.py  codex_phase_policy.py  collect_project_map_candidates.py  compute_change_surface.py  context_router.py  critical_contours.py  ensure_ta3000_direct_routes.ps1  gate_common.py  gate_marker_contract.py  handoff_resolver.py  harness_baseline_metrics.py  install_git_hooks.py  install_ta3000_direct_route_task.ps1  intake_quality.py  launch_moex_baseline_staging_run.py  mcp_preflight_smoke.py  measure_dev_loop.py  mempalace_reclassify.py  mempalace_sync_codex_chats.py  nightly_root_hygiene.py  orchestration_quality.py  (+92 more)
shell/: README.md
tests/: conftest.py
trading_advisor_3000/: __init__.py
(+1967 files in other folders)
